# praxis-py-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .ruff.toml  CHANGELOG.md  Dockerfile  Dockerfile.dagger-fix  Dockerfile.simple  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sample_config.yaml
praxis-sdk-agents-clean/: .bumpversion.toml  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.py  pyproject.toml  repomix-output.xml  trio_test.py
praxis-sdk-agents-clean/.devcontainer/: Dockerfile
praxis-sdk-agents-clean/.github/: CODEOWNERS
praxis-sdk-agents-clean/.github/ISSUE_TEMPLATE/: config.yml
praxis-sdk-agents-clean/.github/workflows/: agents.base-agent.yml  release.praxis-sdk-agents.yml  release.python-agent.yml  reusable.publish-agent.yml  reusable.publish-docker.yml  reusable.publish-python.yml  reusable.release.yml  tests.base-agent.yml  tests.praxis-sdk-agents.yml
praxis-sdk-agents-clean/agents/base-agent/: .bumpversion.toml  Dockerfile  Makefile  entrypoint.py  pyproject.toml
praxis-sdk-agents-clean/agents/base-agent/chart/: Chart.yaml
praxis-sdk-agents-clean/agents/base-agent/tests/: test_base_agent.py
praxis-sdk-agents-clean/base-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_deps.sh  docker-compose.libp2p.yaml  docker-compose.override.yaml  docker-compose.yaml  docker-entrypoint.sh  entrypoint.py  pyproject.toml  repomix-output.xml  start-docker.sh  start-with-libp2p.sh
praxis-sdk-agents-clean/base-agent/chart/: Chart.yaml
praxis-sdk-agents-clean/base-agent/chart/templates/: pod-monitor-head.yaml  pod-monitor-worker.yaml  rayservice.yaml
praxis-sdk-agents-clean/base-agent/docs/: a2a-protocols.md
praxis-sdk-agents-clean/base-agent/py-libp2p/libp2p/: __init__.py
praxis-sdk-agents-clean/base-agent/py-libp2p_old/: setup.py
praxis-sdk-agents-clean/base-agent/src/base_agent/: abc.py  bootstrap.py  models.py  p2p.py  utils.py
praxis-sdk-agents-clean/base-agent/tests/: test_imports.py
praxis-sdk-agents-clean/base-agent/tests/e2e/: mock_relay_node.py  (+2 more)
praxis-sdk-agents-clean/docs/: CONTRIBUTING.md
praxis-sdk-agents-clean/docs/architecture/: agent-context.puml  dA2A.md  sequence.md
praxis-sdk-agents-clean/praxis_sdk/agents/: __init__.py  abc.py  bootstrap.py  config.py  models.py  ray_entrypoint.py  utils.py
praxis-sdk-agents-clean/src/base-agent/: Dockerfile  LICENSE  Makefile
praxis-sdk-agents-clean/src/base_agent/: abc.py  bootstrap.py  config.py  const.py  models.py  p2p.py  ray_entrypoint.py  utils.py
praxis-sdk-agents-clean/tests/: test_base_agent.py  test_p2p_card.py  test_sdk.py  utils.py
praxis-sdk-agents-clean/tests/p2p/: conftest.py  test_circuitv2.py  test_p2p_manager.py
praxis-sdk-core-clean/: .gitignore  .pre-commit-config.yaml  PRE_COMMIT_GUIDE.md  README.md  pyproject.toml
praxis-sdk-core-clean/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
praxis-sdk-core-clean/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
praxis-sdk-core-clean/.github/workflows/: packages.example-package.yml  packages.infra-configs.yml  packages.qdrant-client-custom.yml  packages.redis-client.yml  packages.send-openai-request.yml  packages.tik-tok-package.yml  packages.tool_exception.yml  packages.tweetscout-utils.yml  packages.twitter-ambassador-utils.yml  packages.twitter-follow.yml  pre-commit-checks.yml  publish.packages.yml  python-ci.yml  release.python-package.yml  reusable.publish-python.yml  reusable.release.yml
praxis-sdk-core-clean/docs/: CONTRIBUTING.md
praxis-sdk-core-clean/scripts/: run_mypy.py
praxis-sdk-core-clean/src/redis/: decode_redis.py  post_delay.py  redis_client.py
praxis-sdk-core-clean/src/s3-service/: pyproject.toml
praxis-sdk-core-clean/src/s3_service/: s3_service.py
praxis-sdk-core-clean/src/shared/: http_client.py  utils.py
praxis-sdk-core-clean/tests/agents-tools-logger/: test_agent_tool_logger.py
praxis-sdk-core-clean/tests/ai-tools/: test_ai_tools.py
praxis-sdk-core-clean/tests/coingecko-client/: test_client.py
praxis-sdk-core-clean/tests/dexcreener-wrapper/: test_dexscreener_wrapper.py
praxis-sdk-core-clean/tests/qdrant-client-custom/: test_qdrant_client.py
praxis-sdk-core-clean/tests/redis-client/: test_redis_client.py
praxis-sdk-core-clean/tests/redis-utils/: test_redis_utils.py
praxis-sdk-core-clean/tests/rugcheck-wrapper/: test_rugcheck_wrapper.py
praxis-sdk-core-clean/tests/s3-service/: test_s3_service.py
praxis-sdk-core-clean/tests/send-openai-request/: test_send_openai_request.py
praxis-sdk-core-clean/tests/shared-utils/: __init__.py
praxis-sdk-core-clean/tests/twitter-ambassador-utils/: test_twitter_ambassador_utils.py
praxis-sdk-core-clean/tests/twitter-follow/: test_twitter_follow.py
praxis-sdk-core-clean/tests/twitter-follow-unfollow-get-likes-on-post/: test_twitter_follow_unfollow.py
praxis-sdk-providers-clean/providers/: .bumpversion.toml  Dockerfile  entrypoint.py  pyproject.toml
praxis-sdk-providers-clean/providers/base-provider/: .bumpversion.toml  README.md
tools/: CHANGELOG.md  pyproject.toml
tools/base_provider/: utils.py
tools/base_provider/contract/: base.py
tools/base_provider/processors/: __init__.py
tools/base_provider/sinks/: const.py  models.py
tools/calculator/: contract.yaml  main.py
tools/file_merger/: contract.yaml  main.py
tools/go_hello_world/: contract.yaml  main.go
tools/gpt_outline/: main.py
tools/gpt_rewriter/: main.py
tools/json_formatter/: contract.yaml  main.py
tools/keyword_extractor/: main.py
tools/python_data_processor/: contract.yaml  main.py  sample_data.txt
tools/python_with_deps/: contract.yaml  main.py
tools/simple_go_tool/: contract.yaml  main.go
tools/simple_python_tool/: contract.yaml  main.py
tools/system_info/: contract.yaml  main.py
tools/text_analyzer/: main.py  test_text.txt
tools/text_summarizer/: main.py
tools/word_counter/: contract.yaml  main.py
(+546 files in other folders)
