[project]
name = "base-provider"
version = "0.1.2"
description = "Base provider for Ray Serve"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<1.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "faststream[kafka] (>=0.5.37,<0.6.0)",
]

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[project.entry-points."provider.config.entrypoint"]
basic = "base_provider.config:get_provider_config"

[project.entry-points."provider.entrypoint"]
basic = "base_provider.ray_entrypoint:provider_builder"

[project.entry-points."provider.data_contract.config.entrypoint"]
basic = "base_provider.contract.config.get_data_contract_config"

[project.entry-points."provider.data_contract.entrypoint"]
basic = "base_provider.contract.base:get_data_contract"

[project.entry-points."provider.data_source.config.entrypoint"]
basic = "base_provider.source.config.get_data_source_config"

[project.entry-points."provider.data_source.entrypoint"]
basic = "base_provider.source.base:get_data_source"

[project.entry-points."provider.data_processor.config.entrypoint"]
basic = "base_provider.processor.config.get_data_processor_config"

[project.entry-points."provider.data_processor.entrypoint"]
basic = "base_provider.processor.base:get_data_processor"

[project.entry-points."provider.data_sink.config.entrypoint"]
basic = "base_provider.sink.config.get_data_sink_config"
kafka = "base_provider.sink.config.get_kafka_data_sink_config"

[project.entry-points."provider.data_sink.entrypoint"]
basic = "base_provider.sink.base:get_data_sink"
kafka = "base_provider.sink.kafka:get_kafka_data_sink"

[tool.poetry.group.dev.dependencies]
ray = { extras = ["serve"], version = "^2.42.1" }
pytest = "^8.3.4"
pyarrow = "^19.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
