[project]
name = "hyperliquid-client"
version = "0.0.1"
description = "Package that consists hyperliquidclient"
authors = [
    {name = "0xDevZip",email = "noreply@example.com"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi>=0.115.8,<0.116.0",
    "aiohttp>=3.11.14,<4.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pydantic_settings>=2.7.1",
]

readme = "README.md"

[tool.poetry]
packages = [{include = "*", from="src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
