[project]
name = "ai-tools"
version = "0.0.1"
description = "Package that consists ai tools"
authors = [
    { name = "0xDevZip", email = "noreply@example.com" }
]
requires-python = ">=3.10,<4"
dependencies = [
    "loguru>=0.7.2,<0.8.0",
]

readme = "README.md"

[tool.poetry]
packages = [{ include = "*", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
